tests/option_compile_failed/invalid_when_expression_should_fail_to_compile.rs
use macrofied_toolbox::option;

fn main() {
    option! {
        @when foo();
        @some "will not compile";
    }
}

fn foo() -> usize {
    42
}